--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 APP_PORT = 5000
 SESSION_SECRET = asdnadjkab12312asjfaj823442
 MONGODB_URI = mongodb://localhost:27017/easycar
+JWT_KEY = secret12345
