--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ APP_PORT = 5000
 SESSION_SECRET = asdnadjkab12312asjfaj823442
 MONGODB_URI = mongodb://localhost:27017/easycar
 JWT_KEY = secret12345
+EMAIL = easycar.business.bekasi@gmail.com
+PASSWORD_APP_EMAIL = fzhr aane yrfr apzv
