--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   }
 }
