--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.414.0",
     "react": "^18.2.0",
+    "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
